# Nordic_Thingy91x_Suitcase_Demo

./: .gitignore  CMakeLists.txt  Readme.md  prj.conf
boards/: thingy91x_nrf5340_cpuapp.conf  thingy91x_nrf5340_cpuapp.overlay
cert/: StarfieldServicesCertG2.pem
provisioning/: CMakeLists.txt  prj.conf  sysbuild.conf
provisioning/src/: index.html  main.c
src/: http_resources.h  https_request.c  https_request.h  main.c  sensors.h  wifi.c  wifi.h
src/static_web_resources/: main.js
sta/: .clang-format  CMakeLists.txt  Kconfig  Readme.md  prj.conf
sta/boards/: thingy91x_nrf5340_cpuapp.overlay
sta/src/: JWT_token.h  fqa_orientation.c  fqa_orientation.h  http_resources.c  http_resources.h  https_request.c  main.c  sensors.c  sensors.h  wifi.c  wifi.h  wifi_sta.c  wifi_sta.h  zsl_utils.c  zsl_utils.h
sta/src/static_web_resources/: index.html  index_old.html  main.js  main_old.js  styles.css
sta/sysbuild/mcuboot/boards/: thingy91x_nrf5340_cpuapp.overlay
stl_html_test/: index.html  main.js  styles.css  thingy91x.glb  thingy91x2.glb  thingy91x3.glb
wifi_prov/: prj.conf
wifi_prov/boards/: thingy91x_nrf5340_cpuapp.conf  thingy91x_nrf5340_cpuapp.overlay
wifi_prov/src/: main.c
